[project]
name = "securely"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=7.0.1",
    "matplotlib>=3.10.7",
    "pandas>=2.3.3",
    "polars>=1.34.0",
    "pyarrow>=22.0.0",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
]
